--- a/public/index.html
+++ b/public/index.html
@@ -67,53 +67,52 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <h4 class="center">Welcome!</h4>
                 <p class="flow-text">
-                    The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz, bad nymph, for quick jigs vex! Fox nymphs grab quick-jived waltz. Brick quiz whangs jumpy veldt fox. Bright vixens
+                    We are Bright Bear Bakery, an artisan bakery and coffee shop, baking fresh daily from scratch, using quality ingredients.  No day-old products on our shelves.
                 </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s5">
-                <h4>Hours</h4>
-                <ul>
-                    <li>
-                        Monday: 6AM - 2PM
-                    </li>
-                    <li>
-                        Tuesday: 6AM - 2PM
-                    </li>
-                    <li>
-                        Wednesday: 6AM - 2PM
-                    </li>
-                    <li>
-                        Thursday: 6AM - 2PM
-                    </li>
-                    <li>
-                        Friday: 6AM - 2PM
-                    </li>
-                    <li>
-                        Saturday: 6AM - 2PM
-                    </li>
-                    <li>
-                        Sunday: 6AM - 2PM
-                    </li>
-                </ul>
-            </div>
-            <div class="col s7">
-                <h4>Follow Us</h4>
-                    <a href="https://www.facebook.com/brightbearbakery/" target="_blank"><img class="responsive-img social-icons" src="/images/facebook-icon-img" width="35" height="35"></a>
-                    <a href="https://www.instagram.com/brightbearbakery/" target="_blank"><img class="responsive-img social-icons" src="/images/instagram-icon-img" width="35" height="35"></a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <h4>Help us Grow!</h4>
-                <p class="flow-text">We value your business. Help us grow our business by reviewing your experience with us at Yelp!<a href="https://www.yelp.com/biz/bright-bear-bakery-petaluma" target="_blank"><img class="responsive-img social-icons" src="/images/yelp-icon-img" width="35" height="35"></a></p>
             </div>
         </div>
     </div>
 
+    <footer class="page-footer cyan">
+        <div class="container">
+            <div class="row">
+                <div class="col s4">
+                    <h4>Hours</h4>
+                    <ul>
+                        <li>
+                            Monday: CLOSED
+                        </li>
+                        <li>
+                            Tuesday: 6AM - 10AM
+                        </li>
+                        <li>
+                            Wednesday - Friday: 6AM - 2PM
+                        </li>
+                        <li>
+                            Saturday & Sunday: 7:30AM - 2PM
+                        </li>
+                    </ul>
+                </div>
+                <div class="col s4">
+                    <h4>Address</h4>
+                    <p>
+                        620 Lakeville Hwy, Ste 350 <br>
+                        Petaluma, CA 94954
+                    </p>
+                </div>
+                <div class="col s4 right">
+                    <h4>Follow Us</h4>
+                    <a href="https://www.facebook.com/brightbearbakery/" target="_blank"><img class="responsive-img social-icons" src="/images/facebook-icon-img" width="35" height="35"></a>
+                    <a href="https://www.yelp.com/biz/bright-bear-bakery-petaluma" target="_blank"><img class="responsive-img social-icons" src="/images/yelp-icon-img" width="35" height="35"></a>
+                    <a href="https://www.instagram.com/brightbearbakery/" target="_blank"><img class="responsive-img social-icons" src="/images/instagram-icon-img" width="35" height="35"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright center-align">
+            &copy; 2018 Bright Bear Bakery+
+        </div>
+    </footer>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
