Working on menu

--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
           <a href="#!" class="brand-logo">Bright Bear Bakery +</a>
           <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#">Menu</a></li>
+            <li><a href="/menu">Menu</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">FAQ</a></li>
           </ul>
           <ul class="sidenav" id="mobile-menu">
-            <li><a href="#">Menu</a></li>
+            <li><a href="/menu">Menu</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">FAQ</a></li>
           </ul>
@@ -74,6 +74,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer class="page-footer cyan">
         <div class="container">
             <div class="row">
@@ -110,7 +111,7 @@
             </div>
         </div>
         <div class="footer-copyright center-align">
-            &copy; 2018 Bright Bear Bakery+
+            &copy; Bright Bear Bakery+
         </div>
     </footer>
 
