--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="/styles" />
-    <script src="main.js"></script>
 </head>
 <body>
     
     <!-- Navbar -->
     <nav>
         <div class="nav-wrapper cyan lighten-2">
-          <a href="#!" class="brand-logo">Bright Bear Bakery +</a>
+          <a href="#!" class="brand-logo" id="brand-name">Bright Bear Bakery +</a>
           <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/menu">Menu</a></li>
