instagram collage begun

--- a/public/menu.html
+++ b/public/menu.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav>
         <div class="nav-wrapper cyan lighten-2">
-            <a href="#!" class="brand-logo">Bright Bear Bakery +</a>
+            <a href="#!" class="brand-logo" id="brand-name">Bright Bear Bakery +</a>
             <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/">Home</a></li>
