--- a/public/index.html
+++ b/public/index.html
@@ -122,31 +122,6 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script>
-    
-    $(document).ready(function(){
-        $('.sidenav').sidenav();
-        $('.slider').slider();
-
-        let accesToken = "446793398.b55604c.a7bc35ef13ac4b679fca73b0d4147dfb";
-        let secret = "de0517c8bb0a4170a24c1fa73ef6e190 "
-        let url = `https://api.instagram.com/v1/users/self/media/recent/?access_token=${accesToken}&count=20AppSecret:${secret}`
-
-        $.ajax({
-            url: url,
-            method: 'GET'
-        }).then(function(response){
-            console.log(response.data);
-            let data = response.data;
-            data.forEach(pics => {
-                $('.insta-collage').append(`
-                    <a href="${pics.link}" target="_blank"><img class="responsive-img" src=${pics.images.thumbnail.url}></a>
-                `)
-            });
-        });
-    });
-    
-
-</script>
+<script type="text/javascript" src="/bundle"></script>
 </body>
 </html>
