--- a/public/menu.html
+++ b/public/menu.html
@@ -108,6 +108,7 @@
                     </tbody>
                 </table>
                 <h5>10 % off any order of a dozen or more pastries</h5>
+                <h5>See Store for Daily Offerings</h5>
             </div>
         </div>
         <h3>Breakfast</h3>
@@ -133,12 +134,22 @@
                         <tr>
                             <td>Egg Frittata on a Croissant</td>
                             <td class="ingredients">With eggs, cheese and bacon</td>
-                            <td>$5.00</td>
+                            <td>$6.00</td>
                         </tr>
                         <tr>
                             <td>Open Faced Breakfast</td>
                             <td class="ingredients">served on a croissant with eggs, bacon and chipotle cream cheese</td>
                             <td>$6.00</td>
+                        </tr>
+                        <tr>
+                            <td>Savory Quiche</td>
+                            <td class="ingredients">feta cheese, red bell pepper, sweet onion, basil, and cherry tomatoes</td>
+                            <td>$5.50</td>
+                        </tr>
+                        <tr>
+                            <td>Ham, Bacon, and Cheddar Quiche</td>
+                            <td class="ingredients">feta cheese, red bell pepper, sweet onion, basil, and cherry tomatoes</td>
+                            <td>$5.50</td>
                         </tr>
                     </tbody>
                 </table>
@@ -177,7 +188,7 @@
                         </tr>
                         <tr>
                             <td>Thai Bear Wrap</td>
-                            <td class="ingredients">chicken, mixed greens, spicy aioli and thai peanut sauce</td>
+                            <td class="ingredients">chicken, mixed greens, diced cheese, spicy aioli and Thai peanut sauce</td>
                         </tr>
                     </tbody>
                 </table>
@@ -229,6 +240,7 @@
                                     <li>bacon cheddar</li>
                                     <li>pesto cheddar</li>
                                     <li>rosemary garlic rock salt</li>
+                                    <li>apple pie (limited time)</li>
                                 </ul>
                             </td>
                             <td>$6.75</td>
